# optical_tweezers

./: CMakeLists.txt  Makefile  Makefile_BACKUP  check_leaks.sh  evolution_kernel.cu
Ashis_Simulator/: CMakeLists.txt  CPUCompute.hpp  OTRegion1.sln  OTRegion1.vcproj  PhysicalConstants.hpp  RNG.cpp  RNG.hpp  SphericalParticle.hpp  cpuSphericalParticleSim.cpp  cpuSphericalParticleSim.hpp  force_5_microns_silica.txt  io.cpp  io.h  main.cpp  trajectory_3_r25.txt  velocity.cpp  velocity.h
figs/: cpu_timings.txt  data.txt  full_gpu_prob_moving_0.325.txt  full_gpu_prob_moving_0.65.txt  gpu_timings.txt  out.txt  plotTrajectory.p  plotTrajectory.plt  static_trap-1.0s.txt  trajectory.eps  trajectory_1_r25.txt
figs/static_trap/: 5mic_2brown_strong.txt  filtered_cpu_prob.orig.txt  filtered_cpu_prob.txt  full_cpu_prob.orig.txt  full_cpu_prob_static_1_3s_DOUBLE.txt  full_gpu_prob_static_0_5s.txt  full_gpu_prob_static_1_0s.txt  full_gpu_prob_static_1_5s.txt  full_gpu_prob_static_2_0s.txt  prob_difference_static.m  prob_estimate_static.m  run_01.txt  trapping_probabilities.txt
include/: constants.h  defines.h  gpu.hpp  interpolation.hpp  io.h  laser.h  laser_list.hpp  particle.h  particle_list.h  physobj.h  position_log.hpp  tweezer_render_applet.hpp  util.hpp
papers/journal/: CMakeLists.txt  calculating_trapping_probs.tex  execution_main.tex  gpu_tweezers.bib  gpu_tweezers.tex  parallel_overview.tex  rebuttal.tex  res_speedup.tex  res_trapping_probabilities.tex  trapping_criteria.tex
papers/journal/figures/: cuda_architecture.ai  overview.ai
papers/journal/todonotes/: todonotes.aux  todonotes.dvi  todonotes.glo  todonotes.idx  todonotes.out  todonotes.tdo  todonotes.toc
scripts/: fit_surface.py  plot_cpu_double.m  plot_timings.py  test_gpu.sh  tweezers_double_cpu.sh  tweezers_on_cluster.sh
src/: CMakeLists.txt  arg_parser.cpp  constants.cpp  cpu_driver.cpp  cuda_driver.cpp  driver_kernels.cu  exp_cuda_driver.cpp  experiment_driver.cu  io.cpp  laser.cpp  particle.cpp  particle_list.cpp  physobj.cpp  position_log.cpp  random.cu  tweezer_render_applet.cpp
standalone_double/: Makefile  arg_parser.cpp  constants.h  cpu_driver.cpp  defines.h  double3.cpp  double3.h  exp_cuda_driver.cpp  interpolation.hpp  io.cpp  io.h  laser.cpp  laser.h  laser_list.hpp  particle.cpp  particle.h  particle_list.h  physobj.cpp  physobj.h  position_log.cpp  position_log.hpp  random.hpp  util.hpp  vector3d.cpp  vector3d.h
timings/: cpu.txt
tweezers08/: prob_difference_static.m  prob_estimate_static.m  tweezers08.sln
tweezers08/Results/: final100CPU.txt  final1024CPU.txt  final1024GPU.txt  outputCPU100.txt  outputGPU100.txt
tweezers08/arg_parser/: arg_parser.vcproj
tweezers08/tweezersCpu/: tweezersCpu.vcproj
tweezers08/tweezersGpu/: tweezersGpu.vcproj
